# chanim

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  docker-compose.yml  package-lock.json  packages.txt  pyproject.toml  requirements.txt  test_animations.py  test_builder_func.py
.streamlit/: config.toml
backend/: .dockerignore  .env.example  Dockerfile  fastapi_app.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
backend/app/: builder.py  chart_schemas.py  config.py  enums.py  llm_factory.py  logger.py  models.py  utils.py
backend/app/manim_scenes/: pie_chart_animation.py  scene_builder.py
backend/app/prompts/: crafter.py  highchart.py  infographics.py  manim_coder.py  remotion_coder.py  txt_extraction.py
backend/sample_data/: sample_2_pie.csv  sample_3_grouped.csv  sample_6_line.csv
backend/tests/: test_animations.py  test_builder_func.py  test_manim.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Container.tsx  RenderControls.tsx  VictoryChart.tsx
frontend/remotion/: Root.tsx  index.ts
frontend/styles/: custom.css  global.css
frontend/types/: constants.ts  enums.ts
renderer/: .gitignore  package-lock.json  package.json  render.mjs  server.js
sample_data/: sample_1_bar.csv  sample_4.csv  sample_5.csv
src/: builder.py  config.py  enums.py  highchart_schemas.py  llm_factory.py  logger.py  models.py  utils.py
src/manim_scenes/: bar_chart_animation.py  line_chart_animation.py  pie_chart_animation.py  scene_builder.py
src/prompts/: highchart.py  (+2 more)
(+22 files in other folders)
